first full draft?

--- a/research plan/macros.tex
+++ b/research plan/macros.tex
@@ -38,6 +38,8 @@
 
 \newcommand{\mpara}[1]{\medskip\noindent{\bf #1}}
 \newcommand{\spara}[1]{\smallskip\noindent{\bf #1}}
+\newcommand{\para}[1]{\noindent{\bf #1}}
+
 \newcommand{\acronym}{{\sf\small DIFIAS}\xspace}
 \newcommand{\acronymtitle}{{\sf\Large DIFIAS}\xspace}
 
