--- a/research plan/references.bib
+++ b/research plan/references.bib
@@ -1,35 +1,39 @@
 @article{mitzenmacher2022algorithms,
   title={Algorithms with predictions},
   author={Mitzenmacher, Michael and Vassilvitskii, Sergei},
-  journal={Communications of the ACM},
+  journal={Communications of ACM},
   volume={65},
   number={7},
-  pages={33--35},
   year={2022}
+}
+
+@article{gdfm2011social,
+  title={Social Content Matching in MapReduce},
+  author={De Francisci Morales, Gianmarco and {\textbf{Gionis}}, {\textbf{A}} and Sozio, Mauro},
+  journal={VLDB Endowment},
+  volume={4},
+  number={7},
+  year={2011}
 }
 
 @inproceedings{chen2013combinatorial,
   title={Combinatorial multi-armed bandit: General framework and applications},
   author={Chen, Wei and Wang, Yajun and Yuan, Yang},
-  booktitle={International Conference on Machine Learning},
-  pages={151--159},
+  booktitle={ICML},
   year={2013}
 }
 
 @inproceedings{adriaens2022diameter,
   title={Diameter minimization by shortcutting with degree constraints},
-  author={Adriaens, Florian and Gionis, Aristides},
-  booktitle={2022 IEEE International Conference on Data Mining (ICDM)},
-  pages={843--848},
-  year={2022},
-  organization={IEEE}
+  author={Adriaens, Florian and {\textbf{Gionis}}, {\textbf{A}}},
+  booktitle={IEEE ICDM},
+  year={2022}
 }
 
 @inproceedings{wang2022improving,
   title={Improving screening processes via calibrated subset selection},
   author={Wang, Lequn and Joachims, Thorsten and Rodriguez, Manuel Gomez},
-  booktitle={International Conference on Machine Learning},
-  pages={22702--22726},
+  booktitle={ICML},
   year={2022}
 }
 
@@ -42,37 +46,34 @@
 }
 
 @article{bach2013learning,
-  title={Learning with submodular functions: A convex optimization perspective},
+  title={Learning with submodular functions: {A} convex optimization perspective},
   author={Bach, Francis and others},
-  journal={Foundations and Trends in Machine Learning},
+  journal={FTML},
   volume={6},
   number={2-3},
-  pages={145--373},
   year={2013}
 }
 
 @article{hassin1997approximation,
   title={Approximation algorithms for maximum dispersion},
   author={Hassin, Refael and Rubinstein, Shlomi and Tamir, Arie},
-  journal={Operations research letters},
+  journal={Oper. Res. Letters},
   volume={21},
   number={3},
-  pages={133--137},
   year={1997}
 }
 
 @inproceedings{gollapudi2009axiomatic,
   title={An axiomatic approach for result diversification},
   author={Gollapudi, Sreenivas and Sharma, Aneesh},
-  booktitle={Proceedings of the 18th International Conference on World Wide Web},
-  pages={381--390},
+  booktitle={ACM Web Conference},
   year={2009}
 }
 
 @inproceedings{cevallos2017local,
   title={Local search for max-sum diversification},
   author={Cevallos, Alfonso and Eisenbrand, Friedrich and Zenklusen, Rico},
-  booktitle={Proceedings of the 28th Annual ACM-SIAM Symposium on Discrete Algorithms},
+  booktitle={ACM-SIAM SODA},
   pages={130--142},
   year={2017}
 }
@@ -80,7 +81,7 @@
 @inproceedings{cevallos2016max,
   title={Max-Sum Diversity Via Convex Programming},
   author={Cevallos, Alfonso and Eisenbrand, Friedrich and Zenklusen, Rico},
-  booktitle={32nd International Symposium on Computational Geometry (SoCG)},
+  booktitle={SoCG},
   year={2016}
 }
 
@@ -94,98 +95,98 @@
   year={2019}
 }
 
-@Inbook{Castells2022,
-  author={Castells, Pablo and Hurley, Neil and Vargas, Sa{\'u}l},
+@inproceedings{Castells2022,
+  author={{Castells, {et al.}}, Pablo},
   title={Novelty and Diversity in Recommender Systems},
-  bookTitle={Recommender Systems Handbook},
-  year={2022},
-  publisher={Springer}
+  booktitle={Recommender Systems Handbook},
+  year={2022}
 }
 
 @inproceedings{MMR,
   author = {Carbonell, Jaime and Goldstein, Jade},
   title = {The Use of {MMR}, Diversity-Based Reranking for Reordering Documents and Producing Summaries},
   year = {1998},
-  booktitle = {Proceedings of the 21st Annual International ACM SIGIR Conference on Research and Development in Information Retrieval}
+  booktitle = {ACM SIGIR}
 }
 
 @inproceedings{DUM,
   author = {Ashkan, Azin and Kveton, Branislav and Berkovsky, Shlomo and Wen, Zheng},
   title = {Optimal Greedy Diversity for Recommendation},
-  booktitle = {Proceedings of the 24th International Joint Conference on Artificial Intelligence (IJCAI)},
+  booktitle = {IJCAI},
   year = {2015}
 }
 
 @inproceedings{DPMF,
   author = {Sha, Chaofeng and Wu, Xiaowei and Niu, Junyu},
   title = {A Framework for Recommending Relevant and Diverse Items},
-  booktitle = {Proceedings of the 21st International Joint Conference on Artificial Intelligence (IJCAI)},
+  booktitle = {IJCAI},
   year = {2016}
 }
 
 @article{haddadan2022reducing,
   title={Reducing polarization and increasing diverse navigability in graphs by inserting edges and swapping edge weights},
   author={Haddadan, Shahrzad and Menghini, Cristina and Riondato, Matteo and Upfal, Eli},
-  journal={Data Mining and Knowledge Discovery},
+  journal={DMKD},
   volume={36},
   number={6},
-  pages={2334--2378},
   year={2022}
 }
 
 @inproceedings{fabbri2022rewiring,
   title={Rewiring what-to-watch-next recommendations to reduce radicalization pathways},
-  author={Fabbri, Francesco and Wang, Yanhao and Bonchi, Francesco and Castillo, Carlos and Mathioudakis, Michael},
-  booktitle={Proceedings of the ACM Web Conference},
-  pages={2719--2728},
+  author={Fabbri {et~al.}, Francesco},
+  booktitle={ACM Web Conf.},
   year={2022}
 }
 
 @article{adriaens2023minimizing,
   title={Minimizing Hitting Time between Disparate Groups with Shortcut Edges},
-  author={Adriaens, Florian and Wang, Honglian and Gionis, Aristides},
-  booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  author={Adriaens, Florian and Wang, Honglian and {\textbf{Gionis}}, {\textbf{A}}},
+  journal={SIGKDD},
   year={2023}
 }
 
 @article{coupette2023reducing,
   title={Reducing Exposure to Harmful Content via Graph Rewiring},
-  author={Coupette, Corinna and Neumann, Stefan and Gionis, Aristides},
-  booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  author={Coupette, Corinna and Neumann, Stefan and {\textbf{Gionis}}, {\textbf{A}}},
+  journal={SIGKDD},
   year={2023}
 }
 
 @inproceedings{cinus2023rebalancing,
   title={Rebalancing Social Feed to Minimize Polarization and Disagreement},
-  author={Cinus, Federico and Gionis, Aristides and Bonchi, Francesco},
-  booktitle={Proceedings of the 32nd ACM International Conference on Information and Knowledge Management},
-  pages={369--378},
+  author={Cinus, Federico and {\textbf{Gionis}}, {\textbf{A}} and Bonchi, Francesco},
+  booktitle={ACM CIKM},
   year={2023}
 }
 
 @inproceedings{tsioutsiouliklis2022link,
-  title={Link Recommendations for PageRank Fairness},
-  author={Tsioutsiouliklis, Sotiris and Pitoura, Evaggelia and Semertzidis, Konstantinos and Tsaparas, Panayiotis},
-  booktitle={Proceedings of the ACM Web Conference},
-  pages={3541--3551},
+  title={Link Recommendations for {PageRank} Fairness},
+  author={{Tsioutsiouliklis, {et al.}}, Sotiris},
+  booktitle={ACM Web Conference},
   year={2022}
 }
 
 @inproceedings{wang2021user,
   title={User fairness, item fairness, and diversity for rankings in two-sided markets},
   author={Wang, Lequn and Joachims, Thorsten},
-  booktitle={Proceedings of the ACM SIGIR International Conference on Theory of Information Retrieval},
-  pages={23--41},
+  booktitle={ACM SIGIR},
+  year={2021}
+}
+
+@article{do2021two,
+  title={Two-sided fairness in rankings via {L}orenz dominance},
+  author={Do, Virginie and Corbett-Davies, Sam and Atif, Jamal and Usunier, Nicolas},
+  journal={NeurIPS},
   year={2021}
 }
 
 @article{mehrabi2021survey,
   title={A survey on bias and fairness in machine learning},
-  author={Mehrabi, Ninareh and Morstatter, Fred and Saxena, Nripsuta and Lerman, Kristina and Galstyan, Aram},
+  author={Mehrabi {et~al.}, Ninareh},
   journal={ACM Computing Surveys},
   volume={54},
   number={6},
-  pages={1--35},
   year={2021}
 }
 
@@ -196,44 +197,41 @@
   year={2020}
 }
 
-@article{chierichetti2017fair,
+@inproceedings{chierichetti2017fair,
   title={Fair clustering through fairlets},
   author={Chierichetti, Flavio and Kumar, Ravi and Lattanzi, Silvio and Vassilvitskii, Sergei},
-  journal={Advances in Neural Information Processing Systems},
-  volume={30},
+  booktitle={NeurIPS},
   year={2017}
 }
 
 @article{dong2023fairness,
   title={Fairness in graph mining: A survey},
   author={Dong, Yushun and Ma, Jing and Wang, Song and Chen, Chen and Li, Jundong},
-  journal={IEEE Transactions on Knowledge and Data Engineering},
+  journal={IEEE TKDE},
   year={2023},
   publisher={IEEE}
 }
 
 @inproceedings{thejaswi2021diversity,
-  title={Diversity-aware $k$-median: {C}lustering with fair center representation},
-  author={Thejaswi, Suhas and Ordozgoiti, Bruno and Gionis, Aristides},
-  booktitle={Machine Learning and Knowledge Discovery in Databases (ECML PKDD)},
-  pages={765--780},
+  title={Diversity-aware $k$-median},
+  author={Thejaswi, Suhas and Ordozgoiti, Bruno and {\textbf{Gionis}}, {\textbf{A}}},
+  booktitle={ECML PKDD},
   year={2021}
 }
 
 @article{zhang2022ranking,
   title={Ranking with submodular functions on a budget},
-  author={Zhang, Guangyi and Tatti, Nikolaj and Gionis, Aristides},
-  journal={Data Mining and Knowledge Discovery},
+  author={Zhang, Guangyi and Tatti, Nikolaj and {\textbf{Gionis}}, {\textbf{A}}},
+  journal={DMKD},
   volume={36},
   number={3},
-  pages={1197--1218},
   year={2022}
 }
 
-@article{oettershagen2024finding,
+@inproceedings{oettershagen2024finding,
   title={Finding Densest Subgraphs with Edge-Color Constraints},
-  author={Oettershagen, Lutz and Wang, Honglian and Gionis, Aristides},
-  booktitle={Proceedings of the ACM Web Conference},
+  author={Oettershagen, Lutz and Wang, Honglian and {\textbf{Gionis}}, {\textbf{A}}},
+  booktitle={ACM Web Conf.},
   year={2024}
 }
 
@@ -241,7 +239,7 @@
 @article{cormode2011synopses,
   title={Synopses for massive data: Samples, histograms, wavelets, sketches},
   author={Cormode, Graham and Garofalakis, Minos and Haas, Peter J and Jermaine, Chris and others},
-  journal={Foundations and Trends{\textregistered} in Databases},
+  journal={Foundations and Trends in Databases},
   volume={4},
   number={1--3},
   pages={1--294},
@@ -261,7 +259,7 @@
 @inproceedings{guy2010social,
   title={Social media recommendation based on people and tags},
   author={Guy, Ido and Zwerdling, Naama and Ronen, Inbal and Carmel, David and Uziel, Erel},
-  booktitle={Proceedings of the 33rd International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  booktitle={ACM SIGIR},
   pages={194--201},
   year={2010}
 }
@@ -277,7 +275,7 @@
 @inproceedings{munson2010presenting,
   title={Presenting diverse political opinions: how and how much},
   author={Munson, Sean and Resnick, Paul},
-  booktitle={Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  booktitle={ACM SIGCHI},
   pages={1457--1466},
   year={2010}
 }
@@ -578,7 +576,7 @@ pages = {1130--1132}
 
 @inproceedings{rozenshtein2016reconstructing,
   title={Reconstructing an epidemic over time},
-  author={Rozenshtein, Polina and {\bf Gionis}, {\bf A} and Prakash, Aditya and Vreeken, Jilles},
+  author={Rozenshtein, Polina and {\bf {\textbf{Gionis}}}, {\bf A} and Prakash, Aditya and Vreeken, Jilles},
   booktitle={Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   pages={1835--1844},
   year={2016}
@@ -586,7 +584,7 @@ pages = {1130--1132}
 
 @article{rozenshtein2017finding,
   title={Finding dynamic dense subgraphs},
-  author={Rozenshtein, Polina and Tatti, Nikolaj and {\bf Gionis}, {\bf A}},
+  author={Rozenshtein, Polina and Tatti, Nikolaj and {\bf {\textbf{Gionis}}}, {\bf A}},
   journal={ACM Transactions on Knowledge Discovery from Data (TKDD)},
   volume={11},
   number={3},
@@ -597,7 +595,7 @@ pages = {1130--1132}
 
 @inproceedings{rozenshtein2016temporal,
   title={Temporal pagerank},
-  author={Rozenshtein, Polina and {\bf Gionis}, {\bf A}},
+  author={Rozenshtein, Polina and {\bf {\textbf{Gionis}}}, {\bf A}},
   booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
   pages={674--689},
   year={2016}
@@ -605,7 +603,7 @@ pages = {1130--1132}
 
 @inproceedings{rozenshtein2017untangling,
   title={The network-untangling problem: From interactions to activity timelines},
-  author={Rozenshtein, Polina and Tatti, Nikolaj and {\bf Gionis}, {\bf A}},
+  author={Rozenshtein, Polina and Tatti, Nikolaj and {\bf {\textbf{Gionis}}}, {\bf A}},
   booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases (ECML PKDD)},
   pages={701--716},
   year={2017}
@@ -642,21 +640,21 @@ pages = {1130--1132}
 
 @article{diversity-cascade,
   title={Maximizing the diversity of exposure in a social network},
-  author={Aslay, Cigdem and Galbrun, Esther and {\bf Gionis}, {\bf A} and Matakos, Antonis},
+  author={Aslay, Cigdem and Galbrun, Esther and {\bf {\textbf{Gionis}}}, {\bf A} and Matakos, Antonis},
   booktitle={Proceedings of the IEEE International Conference on Data Mining (ICDM)},
   year={2018}
 }
 
 @article{diversity-static,
   title={Tell me something my friends do not know: Diversity maximization in social networks},
-  author={Matakos, Antonis and {\bf Gionis}, {\bf A}},
+  author={Matakos, Antonis and {\bf {\textbf{Gionis}}}, {\bf A}},
   booktitle={Proceedings of the IEEE International Conference on Data Mining (ICDM)},
   year={2018}
 }
 
 @inproceedings{das2013learning,
   title={Learning to question: leveraging user preferences for shopping advice},
-  author={Das, Mahashweta and De Francisci Morales, Gianmarco and {\bf Gionis}, {\bf A} and Weber, Ingmar},
+  author={Das, Mahashweta and De Francisci Morales, Gianmarco and {\bf {\textbf{Gionis}}}, {\bf A} and Weber, Ingmar},
  booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge discovery and data mining},
   pages={203--211},
   year={2013}
@@ -664,7 +662,7 @@ pages = {1130--1132}
 
 @article{garimella2018quantifying,
   title={Quantifying controversy on social media},
-  author={Garimella, Kiran and Morales, Gianmarco De Francisci and {\bf Gionis}, {\bf A} and Mathioudakis, Michael},
+  author={Garimella, Kiran and Morales, Gianmarco De Francisci and {\bf {\textbf{Gionis}}}, {\bf A} and Mathioudakis, Michael},
   journal={ACM Transactions on Social Computing},
   volume={1},
   number={1},
@@ -675,7 +673,7 @@ pages = {1130--1132}
 
 @inproceedings{garimella2017reducing,
   title={Reducing controversy by connecting opposing views},
-  author={Garimella, Kiran and De Francisci Morales, Gianmarco and {\bf Gionis}, {\bf A} and Mathioudakis, Michael},
+  author={Garimella, Kiran and De Francisci Morales, Gianmarco and {\bf {\textbf{Gionis}}}, {\bf A} and Mathioudakis, Michael},
   booktitle={ACM International Conference on Web Search and Data Mining (WSDM)},
   pages={81--90},
   year={2017}
@@ -683,14 +681,14 @@ pages = {1130--1132}
 
 @inproceedings{garimella2018political,
   title={Political discourse on social media: Echo chambers, gatekeepers, and the Price of bipartisanship},
-  author={Garimella, Kiran and Morales, Gianmarco De Francisci and {\bf Gionis}, {\bf A} and Mathioudakis, Michael},
+  author={Garimella, Kiran and Morales, Gianmarco De Francisci and {\bf {\textbf{Gionis}}}, {\bf A} and Mathioudakis, Michael},
   booktitle={Proceedings of the WebConference (WWW)},
   year={2018}
 }
 
 @inproceedings{lahoti2018joint,
   title={Joint non-negative matrix factorization for learning ideological leaning on Twitter},
-  author={Lahoti, Preethi and Garimella, Kiran and {\bf Gionis}, {\bf A}},
+  author={Lahoti, Preethi and Garimella, Kiran and {\bf {\textbf{Gionis}}}, {\bf A}},
   booktitle={Proceedings of the ACM International Conference on Web Search and Data Mining (WSDM)},
   pages={351--359},
   year={2018}
@@ -698,7 +696,7 @@ pages = {1130--1132}
 
 @inproceedings{garimella2017balancing,
   title={Balancing information exposure in social networks},
-  author={Garimella, Kiran and {\bf Gionis}, {\bf A} and Parotsidis, Nikos and Tatti, Nikolaj},
+  author={Garimella, Kiran and {\bf {\textbf{Gionis}}}, {\bf A} and Parotsidis, Nikos and Tatti, Nikolaj},
   booktitle={Advances in Neural Information Processing Systems (NIPS)},
   pages={4663--4671},
   year={2017}
@@ -706,7 +704,7 @@ pages = {1130--1132}
 
 @article{consensus-k-median,
   title={Consensus $k$-median},
-  author={Ordozgoiti, Bruno and {\bf Gionis}, {\bf A}},
+  author={Ordozgoiti, Bruno and {\bf {\textbf{Gionis}}}, {\bf A}},
   journal={Submitted for publication},
   year={2018}
 }
@@ -733,7 +731,7 @@ pages = {1130--1132}
 
 @inproceedings{tatti2015density,
   title={Density-friendly graph decomposition},
-  author={Tatti, Nikolaj and {\bf Gionis}, {\bf A}},
+  author={Tatti, Nikolaj and {\bf {\textbf{Gionis}}}, {\bf A}},
   booktitle={24th International Conference on World Wide Web (WWW)},
   pages={1089--1099},
   year={2015}
@@ -742,16 +740,15 @@ pages = {1130--1132}
 
 @inproceedings{borodin2012max,
   title={Max-sum diversification, monotone submodular functions and dynamic updates},
-  author={Borodin, Allan and Lee, Hyun Chul and Ye, Yuli},
+  author={{Borodin, {et al.}}, Allan},
   booktitle={PODS},
-  pages={155--166},
   year={2012}
 }
 
 @article{galbrun2014overlapping,
   title={Overlapping community detection in labeled graphs},
-  author={Galbrun, Esther and {\bf Gionis}, {\bf A} and Tatti, Nikolaj},
-  journal={Data Mining and Knowledge Discovery},
+  author={Galbrun, Esther and {\bf {\textbf{Gionis}}}, {\bf A} and Tatti, Nikolaj},
+  journal={DMKD},
   volume={28},
   number={5--6},
   pages={1586--1610},
@@ -775,7 +772,7 @@ year = {1984}
 
 @inproceedings{rozenshtein2014event,
   title={Event detection in activity networks},
-  author={Rozenshtein, Polina and Anagnostopoulos, Aris and {\bf Gionis}, {\bf A} and Tatti, Nikolaj},
+  author={Rozenshtein, Polina and Anagnostopoulos, Aris and {\bf {\textbf{Gionis}}}, {\bf A} and Tatti, Nikolaj},
   booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   pages={1176--1185},
   year={2014}
@@ -783,7 +780,7 @@ year = {1984}
 
 @inproceedings{tsourakakis2013denser,
   title={Denser than the densest subgraph: Extracting optimal quasi-cliques with quality guarantees},
-  author={Tsourakakis, Charalampos and Bonchi, Francesco and {\bf Gionis}, {\bf A} and Gullo, Francesco and Tsiarli, Maria},
+  author={Tsourakakis, Charalampos and Bonchi, Francesco and {\bf {\textbf{Gionis}}}, {\bf A} and Gullo, Francesco and Tsiarli, Maria},
   booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   pages={104--112},
   year={2013}
@@ -809,13 +806,13 @@ year = {1984}
 
 @article{coletto2017motif,
   title={A motif-based approach for identifying controversy},
-  author={Coletto, Mauro and Garimella, Kiran and {\bf Gionis}, {\bf A} and Lucchese, Claudio},
+  author={Coletto, Mauro and Garimella, Kiran and {\bf {\textbf{Gionis}}}, {\bf A} and Lucchese, Claudio},
   booktitle={Proceedings of the International AAAI Conference on Web and Social Media (ICWSM)},
   year={2017}
 }
 
 @inproceedings{aslay2018mining,
- author = {Aslay, Cigdem and Nasir, Anis and De Francisci Morales, Gianmarco and {\bf Gionis}, {\bf A}},
+ author = {Aslay, Cigdem and Nasir, Anis and De Francisci Morales, Gianmarco and {\bf {\textbf{Gionis}}}, {\bf A}},
  title = {Mining frequent patterns in evolving graphs},
  booktitle = {Proceedings of the 27th ACM International Conference on Information and Knowledge Management (CIKM)},
  year = {2018}
@@ -823,7 +820,7 @@ year = {1984}
 
 @inproceedings{arockiasamy2016combinatorial,
   title={A combinatorial approach to role discovery},
-  author={Arockiasamy, Albert and {\bf Gionis}, {\bf A} and Tatti, Nikolaj},
+  author={Arockiasamy, Albert and {\bf {\textbf{Gionis}}}, {\bf A} and Tatti, Nikolaj},
   booktitle={Proceedings of the IEEE 16th International Conference on Data Mining (ICDM)},
   pages={787--792},
   year={2016}
@@ -831,7 +828,7 @@ year = {1984}
 
 
 @inproceedings{potamias2009fast,
- author = {Potamias, Michalis and Bonchi, Francesco and Castillo, Carlos and {\bf Gionis}, {\bf A}},
+ author = {Potamias, Michalis and Bonchi, Francesco and Castillo, Carlos and {\bf {\textbf{Gionis}}}, {\bf A}},
  title = {Fast Shortest Path Distance Estimation in Large Networks},
  booktitle = {CIKM},
  year = {2009},
@@ -841,7 +838,7 @@ year = {1984}
 
 @incollection{rozenshtein2014discovering,
   title={Discovering dynamic communities in interaction networks},
-  author={Rozenshtein, Polina and Tatti, Nikolaj and {\bf Gionis}, {\bf A}},
+  author={Rozenshtein, Polina and Tatti, Nikolaj and {\bf {\textbf{Gionis}}}, {\bf A}},
   booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases (ECML PKDD)},
   pages={678--693},
   year={2014},
@@ -983,7 +980,7 @@ year = {1984}
 
 @inproceedings{bordino2008mining,
   title={Mining large networks with subgraph counting},
-  author={Bordino, Ilaria and Donato, Debora and {\bf Gionis}, {\bf A} and Leonardi, Stefano},
+  author={Bordino, Ilaria and Donato, Debora and {\bf {\textbf{Gionis}}}, {\bf A} and Leonardi, Stefano},
   booktitle={Proceedings of the IEEE International Conference on Data Mining (ICDM)},
   pages={737--742},
   year={2008}
@@ -1032,7 +1029,7 @@ year = {1984}
 
 @inproceedings{becchetti2008efficient,
   title={Efficient semi-streaming algorithms for local triangle counting in massive graphs},
-  author={Becchetti, Luca and Boldi, Paolo and Castillo, Carlos and {\bf Gionis}, {\bf A}},
+  author={Becchetti, Luca and Boldi, Paolo and Castillo, Carlos and {\bf {\textbf{Gionis}}}, {\bf A}},
   booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   year={2008}
 }
@@ -1067,7 +1064,7 @@ year = {1984}
 
 @inproceedings{CCC,
   author    = {Bonchi, Francesco and
-               {\bf Gionis}, {\bf A} and
+               {\bf {\textbf{Gionis}}}, {\bf A} and
                Gullo, Francesco and
                Ukkonen, Antti},
   title     = {Chromatic correlation clustering},
@@ -1098,7 +1095,7 @@ year = {1984}
 }
 
 @inproceedings{ojala2010evaluating,
-  author    = {Markus Ojala, Gemma Garriga and {\bf A. Gionis} and Heikki Mannila},
+  author    = {Markus Ojala, Gemma Garriga and {\bf A. {\textbf{Gionis}}} and Heikki Mannila},
   title     = {Evaluating query result significance in databases via randomizations},
   booktitle	= {SDM},
   year      = {2010}
@@ -1106,7 +1103,7 @@ year = {1984}
 
 
 @article{gionis2007assessing,
-  author    = {{\bf Gionis}, {\bf A} and  Mannila, Heikki and Mielikainen, Taneli and Tsaparas, Panayiotis},
+  author    = {{\bf {\textbf{Gionis}}}, {\bf A} and  Mannila, Heikki and Mielikainen, Taneli and Tsaparas, Panayiotis},
   title     = {Assessing data mining results via swap randomization},
   journal   = {ACM Transactions on Knowledge Discovery from Data (TKDD)},
   volume    = {1},
@@ -1168,7 +1165,7 @@ year = {1984}
 }
 
 @inproceedings{germ,
-  author    = {Berlingerio, Michele and Bonchi, Francesco and Bringmann, Bj{\"o}rn and {\bf Gionis}, {\bf A}},
+  author    = {Berlingerio, Michele and Bonchi, Francesco and Bringmann, Bj{\"o}rn and {\bf {\textbf{Gionis}}}, {\bf A}},
   title     = {Mining Graph Evolution Rules},
   booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases (ECML PKDD)},
   pages     = {115--130},
@@ -1247,7 +1244,7 @@ year = {1984}
 }
 
 @article{gionis2007clustering,
-  author    = {{\bf Gionis}, {\bf A} and Mannila, Heikki and Tsaparas, Panayiotis},
+  author    = {{\bf {\textbf{Gionis}}}, {\bf A} and Mannila, Heikki and Tsaparas, Panayiotis},
   title     = {Clustering aggregation},
   journal   = {ACM Transactions on Knowledge Discovery from Data (TKDD)},
   volume    = {1},
@@ -1264,7 +1261,7 @@ year = {1984}
 
 
 @inproceedings{gionis2012estimating,
-  author = {{\bf Gionis}, {\bf A} and  Lappas, Ted and  Terzi, Evimaria},
+  author = {{\bf {\textbf{Gionis}}}, {\bf A} and  Lappas, Ted and  Terzi, Evimaria},
   title  = {Estimating importance via counting set covers},
   booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   year      = {2012}
@@ -1381,21 +1378,21 @@ year = {1984}
 }
 
 @inproceedings{bonchi2011overlapping,
-  author = {Bonchi, Francesco and {\bf Gionis}, {\bf A} and Ukkonen, Antti},
+  author = {Bonchi, Francesco and {\bf {\textbf{Gionis}}}, {\bf A} and Ukkonen, Antti},
   title = {Overlapping correlation clustering},
   booktitle={Proceedings of the IEEE International Conference on Data Mining (ICDM)},
   year = {2011}
 }
 
 @inproceedings{mathioudakis2011sparsification,
-  author    = {Mathioudakis, Michael and Bonchi, Francesco and Castillo, Carlos and {\bf Gionis}, {\bf A} and Ukkonen, Antti},
+  author    = {Mathioudakis, Michael and Bonchi, Francesco and Castillo, Carlos and {\bf {\textbf{Gionis}}}, {\bf A} and Ukkonen, Antti},
   title     = {Sparsification of influence networks},
  booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge discovery and data mining},
   year      = {2011}
 }
 
 @inproceedings{sozio2010community-search,
-  author    = {Sozio, Mauro and {\bf Gionis}, {\bf A}},
+  author    = {Sozio, Mauro and {\bf {\textbf{Gionis}}}, {\bf A}},
   title     = {The community-search problem and how to plan a successful cocktail party},
  booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge discovery and data mining},
    pages={939--948},
@@ -1403,14 +1400,14 @@ year = {1984}
 }
 
 @inproceedings{papapetrou2011shapley,
-  author    = {Papapetrou, Panagiotis and  {\bf Gionis}, {\bf A} and Mannila, Heikki},
+  author    = {Papapetrou, Panagiotis and  {\bf {\textbf{Gionis}}}, {\bf A} and Mannila, Heikki},
   title     = {{A Shapley value approach for influence attribution}},
   booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases (ECML PKDD)},
   year      = {2011}
 }
 
 @inproceedings{anagnostopoulos2010power,
-  author    = {Anagnostopoulos, Aris and Becchetti, Luca and Castillo, Carlos and {\bf Gionis}, {\bf A} and Leonardi, Stefano},
+  author    = {Anagnostopoulos, Aris and Becchetti, Luca and Castillo, Carlos and {\bf {\textbf{Gionis}}}, {\bf A} and Leonardi, Stefano},
   title     = {Power in unity: forming teams in large-scale community systems},
   booktitle = {CIKM},
   year      = {2010}
