--- a/research plan/macros.tex
+++ b/research plan/macros.tex
@@ -31,17 +31,17 @@
 \definecolor{verylightmagenta}{rgb}{0.95,0.96,1.0}
 \definecolor{brightred}{rgb}{0.90,0.2,0.2}
 
-\newcommand{\ag}[1]{\vspace{1mm}\noindent{\color{orange}{\textbf{Comment:} #1}}}
-% \newcommand{\ag}[1]{}
-\newcommand{\instructions}[1]{\vspace{1mm}\noindent{\color{blue}{#1}}}
-% \newcommand{\instructions}[1]{}
+% \newcommand{\ag}[1]{\vspace{1mm}\noindent{\color{orange}{\textbf{Comment:} #1}}}
+\newcommand{\ag}[1]{}
+% \newcommand{\instructions}[1]{\vspace{1mm}\noindent{\color{blue}{#1}}}
+\newcommand{\instructions}[1]{}
 
 \newcommand{\mpara}[1]{\medskip\noindent{\bf #1}}
 \newcommand{\spara}[1]{\smallskip\noindent{\bf #1}}
 \newcommand{\para}[1]{\noindent{\bf #1}}
 
 \newcommand{\acronym}{{\sf\small DIFIAS}\xspace}
-\newcommand{\acronymtitle}{{\sf\Large DIFIAS}\xspace}
+\newcommand{\acronymtitle}{{\sf\large DIFIAS}\xspace}
 
 \newcommand{\exploration}{{\sf\small Exploration}\xspace}
 \newcommand{\networks}{{\sf\small Networks}\xspace}
